[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Clint Ascencio <clintascencio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
